feature/KLDV-3066-pagination apply review, need to test